@@ -2,7 +2,7 @@
  * #%L
  * OME Bio-Formats package for reading and converting biological file formats.
  * %%
- * Copyright (C) 2005 - 2013 Open Microscopy Environment:
+ * Copyright (C) 2005 - 2014 Open Microscopy Environment:
  *   - Board of Regents of the University of Wisconsin-Madison
  *   - Glencoe Software, Inc.
  *   - University of Dundee
@@ -26,6 +26,8 @@
 package loci.formats.in;
 
 import java.io.IOException;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.Vector;
 
 import loci.common.DataTools;
@@ -43,15 +45,15 @@ import loci.formats.meta.MetadataStore;
 import ome.xml.model.enums.Correction;
 import ome.xml.model.enums.Immersion;
 import ome.xml.model.primitives.PositiveFloat;
-import ome.xml.model.primitives.PositiveInteger;
 import ome.xml.model.primitives.Timestamp;
+
+import ome.units.quantity.Frequency;
+import ome.units.quantity.Length;
+import ome.units.quantity.Time;
+import ome.units.UNITS;
 
 /**
  * DeltavisionReader is the file format reader for Deltavision files.
- *
- * <dl><dt><b>Source code:</b></dt>
- * <dd><a href="http://trac.openmicroscopy.org.uk/ome/browser/bioformats.git/components/bio-formats/src/loci/formats/in/DeltavisionReader.java">Trac</a>,
- * <a href="http://git.openmicroscopy.org/?p=bioformats.git;a=blob;f=components/bio-formats/src/loci/formats/in/DeltavisionReader.java;hb=HEAD">Gitweb</a></dd></dl>
  *
  * @author Melissa Linkert melissa at glencoesoftware.com
  */
@@ -62,7 +64,7 @@ public class DeltavisionReader extends FormatReader {
   public static final int DV_MAGIC_BYTES_1 = 0xa0c0;
   public static final int DV_MAGIC_BYTES_2 = 0xc0a0;
 
-  public static final String DATE_FORMAT = "EEE MMM  d HH:mm:ss yyyy";
+  public static final String DATE_FORMAT = "E MMM d HH:mm:ss yyyy";
 
   private static final short LITTLE_ENDIAN = -16224;
   private static final int HEADER_LENGTH = 1024;
@@ -131,11 +133,13 @@ public class DeltavisionReader extends FormatReader {
   // -- IFormatReader API methods --
 
   /* @see loci.formats.IFormatReader#isSingleFile(String) */
+  @Override
   public boolean isSingleFile(String id) throws FormatException, IOException {
     return false;
   }
 
   /* @see loci.formats.IFormatReader#isThisType(String, boolean) */
+  @Override
   public boolean isThisType(String name, boolean open) {
     if (checkSuffix(name, "dv.log") || checkSuffix(name, "r3d.log") ||
       name.endsWith("_log.txt"))
@@ -147,6 +151,7 @@ public class DeltavisionReader extends FormatReader {
   }
 
   /* @see loci.formats.IFormatReader#isThisType(RandomAccessInputStream) */
+  @Override
   public boolean isThisType(RandomAccessInputStream stream) throws IOException {
     final int blockLen = 98;
     if (!FormatTools.validStream(stream, blockLen, false)) return false;
@@ -156,6 +161,7 @@ public class DeltavisionReader extends FormatReader {
   }
 
   /* @see loci.formats.IFormatReader#getSeriesUsedFiles(boolean) */
+  @Override
   public String[] getSeriesUsedFiles(boolean noPixels) {
     FormatTools.assertId(currentId, true, 1);
     Vector<String> files = new Vector<String>();
@@ -168,6 +174,7 @@ public class DeltavisionReader extends FormatReader {
   /**
    * @see loci.formats.IFormatReader#openBytes(int, byte[], int, int, int, int)
    */
+  @Override
   public byte[] openBytes(int no, byte[] buf, int x, int y, int w, int h)
     throws FormatException, IOException
   {
@@ -195,6 +202,7 @@ public class DeltavisionReader extends FormatReader {
   }
 
   /* @see loci.formats.IFormatReader#close(boolean) */
+  @Override
   public void close(boolean fileOnly) throws IOException {
     super.close(fileOnly);
     if (!fileOnly) {
@@ -228,6 +236,7 @@ public class DeltavisionReader extends FormatReader {
   // -- Internal FormatReader API methods --
 
   /* @see loci.formats.FormatReader#initFile(String) */
+  @Override
   protected void initFile(String id) throws FormatException, IOException {
     if (!checkSuffix(id, "dv")) {
       if (checkSuffix(id, "dv.log") || checkSuffix(id, "r3d.log")) {
@@ -379,12 +388,14 @@ public class DeltavisionReader extends FormatReader {
 
     ndFilters = new Double[getSizeC()];
 
-    Vector<Float> uniqueTileX = new Vector<Float>();
-    Vector<Float> uniqueTileY = new Vector<Float>();
+    final Vector<Length> uniqueTileX = new Vector<Length>();
+    final Vector<Length> uniqueTileY = new Vector<Length>();
 
     // Run through every image and fill in the
     // Extended Header information array for that image
     int offset = HEADER_LENGTH + numIntsPerSection * 4;
+    boolean hasZeroX = false;
+    boolean hasZeroY = false;
     for (int i=0; i<getImageCount(); i++) {
       int[] coords = getZCTCoords(i);
       int z = coords[0];
@@ -397,19 +408,40 @@ public class DeltavisionReader extends FormatReader {
       DVExtHdrFields hdr = new DVExtHdrFields(in);
       extHdrFields[z][w][t] = hdr;
 
-      if (!uniqueTileX.contains(hdr.stageXCoord)) {
+      if (!uniqueTileX.contains(hdr.stageXCoord) &&
+              hdr.stageXCoord.value().floatValue() != 0) {
         uniqueTileX.add(hdr.stageXCoord);
       }
-      if (!uniqueTileY.contains(hdr.stageYCoord)) {
+      else if (hdr.stageXCoord.value().floatValue() == 0) {
+        hasZeroX = true;
+      }
+
+      if (!uniqueTileY.contains(hdr.stageYCoord) &&
+              hdr.stageYCoord.value().floatValue() != 0) {
         uniqueTileY.add(hdr.stageYCoord);
+      }
+      else if (hdr.stageYCoord.value().floatValue() == 0) {
+        hasZeroY = true;
       }
     }
 
     xTiles = uniqueTileX.size();
     yTiles = uniqueTileY.size();
 
+    if (xTiles > 1 || yTiles > 1) {
+      if (hasZeroX) {
+        xTiles++;
+      }
+      if (hasZeroY) {
+        yTiles++;
+      }
+    }
+
     if (yTiles > 1) {
-      if (uniqueTileY.get(1) < uniqueTileY.get(0)) {
+       // TODO: use compareTo once Length implements Comparable
+      final Number y0 = uniqueTileY.get(0).value(UNITS.REFERENCEFRAME);
+      final Number y1 = uniqueTileY.get(1).value(UNITS.REFERENCEFRAME);
+      if (y1.floatValue() < y0.floatValue()) {
         backwardsStage = true;
       }
     }
@@ -483,13 +515,11 @@ public class DeltavisionReader extends FormatReader {
 
         // -- record original metadata --
 
-        // NB: It adds a little overhead to record the extended headers into the
-        // original metadata table, but not as much as registering every header
-        // field individually. With this approach it is still easy to
-        // programmatically access any given extended header field.
         String prefix =
           "Extended header Z" + coords[0] + " W" + coords[1] + " T" + coords[2];
-        addSeriesMeta(prefix, hdr);
+        for (Map.Entry<String, Object> entry : hdr.asMap().entrySet()) {
+          addSeriesMeta(prefix + ":" + entry.getKey(), entry.getValue());
+        }
 
         addGlobalMetaList("X position for position", hdr.stageXCoord);
         addGlobalMetaList("Y position for position", hdr.stageYCoord);
@@ -666,17 +696,17 @@ public class DeltavisionReader extends FormatReader {
       }
 
       Double x = new Double(pixX);
-      PositiveFloat sizeX = FormatTools.getPhysicalSizeX(x);
+      Length sizeX = FormatTools.getPhysicalSizeX(x);
       if (sizeX != null) {
         store.setPixelsPhysicalSizeX(sizeX, series);
       }
       Double y = new Double(pixY);
-      PositiveFloat sizeY = FormatTools.getPhysicalSizeY(y);
+      Length sizeY = FormatTools.getPhysicalSizeY(y);
       if (sizeY != null) {
         store.setPixelsPhysicalSizeY(sizeY, series);
       }
       Double z = new Double(pixZ);
-      PositiveFloat sizeZ = FormatTools.getPhysicalSizeZ(z);
+      Length sizeZ = FormatTools.getPhysicalSizeZ(z);
       if (sizeZ != null) {
         store.setPixelsPhysicalSizeZ(sizeZ, series);
       }
@@ -711,25 +741,25 @@ public class DeltavisionReader extends FormatReader {
         DVExtHdrFields hdr = extHdrFields[coords[0]][coords[1]][tIndex];
 
         // plane timing
-        store.setPlaneDeltaT(new Double(hdr.timeStampSeconds), series, i);
+        store.setPlaneDeltaT(new Time(new Double(hdr.timeStampSeconds), UNITS.S), series, i);
         store.setPlaneExposureTime(
-          new Double(extHdrFields[0][coords[1]][0].expTime), series, i);
+          new Time(new Double(extHdrFields[0][coords[1]][0].expTime), UNITS.S), series, i);
 
         // stage position
         if (!logFound || getSeriesCount() > 1) {
-          store.setPlanePositionX(new Double(hdr.stageXCoord), series, i);
-          store.setPlanePositionY(new Double(hdr.stageYCoord), series, i);
-          store.setPlanePositionZ(new Double(hdr.stageZCoord), series, i);
+          store.setPlanePositionX(hdr.stageXCoord, series, i);
+          store.setPlanePositionY(hdr.stageYCoord, series, i);
+          store.setPlanePositionZ(hdr.stageZCoord, series, i);
         }
       }
 
       for (int w=0; w<getSizeC(); w++) {
         DVExtHdrFields hdrC = extHdrFields[0][w][series];
 
-        PositiveInteger emission =
-          FormatTools.getEmissionWavelength((int) waves[w]);
-        PositiveInteger excitation =
-          FormatTools.getExcitationWavelength((int) hdrC.exWavelen);
+        Length emission =
+          FormatTools.getEmissionWavelength(new Double(waves[w]));
+        Length excitation =
+          FormatTools.getExcitationWavelength(new Double(hdrC.exWavelen));
 
         if (emission != null) {
           store.setChannelEmissionWavelength(emission, series, w);
@@ -933,12 +963,8 @@ public class DeltavisionReader extends FormatReader {
 
     for (String line : lines) {
       int colon = line.indexOf(":");
-      if (colon != -1) {
-        if (line.startsWith("Created")) {
-          key = "Created";
-          colon = 6;
-        }
-        else key = line.substring(0, colon).trim();
+      if (colon != -1 && !line.startsWith("Created")) {
+        key = line.substring(0, colon).trim();
 
         value = line.substring(colon + 1).trim();
         if (value.equals("") && !key.equals("")) prefix = key;
@@ -1016,7 +1042,7 @@ public class DeltavisionReader extends FormatReader {
                 pixelSizes[q].trim());
             }
             if (q == 0) {
-              PositiveFloat sizeX = FormatTools.getPhysicalSizeX(size);
+              Length sizeX = FormatTools.getPhysicalSizeX(size);
               if (sizeX != null) {
                 for (int series=0; series<getSeriesCount(); series++) {
                   store.setPixelsPhysicalSizeX(sizeX, series);
@@ -1024,7 +1050,7 @@ public class DeltavisionReader extends FormatReader {
               }
             }
             if (q == 1) {
-              PositiveFloat sizeY = FormatTools.getPhysicalSizeY(size);
+              Length sizeY = FormatTools.getPhysicalSizeY(size);
               if (sizeY != null) {
                 for (int series=0; series<getSeriesCount(); series++) {
                   store.setPixelsPhysicalSizeY(sizeY, series);
@@ -1032,7 +1058,7 @@ public class DeltavisionReader extends FormatReader {
               }
             }
             if (q == 2) {
-              PositiveFloat sizeZ = FormatTools.getPhysicalSizeZ(size);
+              Length sizeZ = FormatTools.getPhysicalSizeZ(size);
               if (sizeZ != null) {
                 for (int series=0; series<getSeriesCount(); series++) {
                   store.setPixelsPhysicalSizeZ(sizeZ, series);
@@ -1081,7 +1107,8 @@ public class DeltavisionReader extends FormatReader {
             store.setDetectorID(detectorID, 0, 0);
             for (int series=0; series<getSeriesCount(); series++) {
               for (int c=0; c<getSizeC(); c++) {
-                store.setDetectorSettingsReadOutRate(mhz, series, c);
+                store.setDetectorSettingsReadOutRate(
+                        new Frequency(mhz, UNITS.HZ), series, c);
                 store.setDetectorSettingsID(detectorID, series, c);
               }
             }
@@ -1137,9 +1164,10 @@ public class DeltavisionReader extends FormatReader {
           }
           String[] coords = value.split(",");
           for (int i=0; i<coords.length; i++) {
-            Double p = null;
+            Length p = null;
             try {
-              p = new Double(coords[i].trim());
+              final Double number = Double.valueOf(coords[i]);
+              p = new Length(number, UNITS.REFERENCEFRAME);
             }
             catch (NumberFormatException e) {
               LOGGER.warn("Could not parse stage coordinate '{}'", coords[i]);
@@ -2221,19 +2249,19 @@ public class DeltavisionReader extends FormatReader {
       store.setObjectiveCalibratedMagnification(calibratedMagnification, 0, 0);
     }
     if (workingDistance != null) {
-      store.setObjectiveWorkingDistance(workingDistance * 1000, 0, 0);
+      store.setObjectiveWorkingDistance(new Length(workingDistance * 1000, UNITS.MICROM), 0, 0);
     }
   }
 
   // -- Helper classes --
 
   /**
-   * This private class structure holds the details for the extended header
+   * This private class structure holds the details for the extended header.
+   * Instances of the class should <em>NOT</em> leak out of the containing
+   * instance.
    * @author Brian W. Loranger
    */
-  private class DVExtHdrFields {
-
-    private int offsetWithInts;
+  private static class DVExtHdrFields {
 
     /** Photosensor reading. Typically in mV. */
     public float photosensorReading;
@@ -2242,13 +2270,13 @@ public class DeltavisionReader extends FormatReader {
     public float timeStampSeconds;
 
     /** X stage coordinates. */
-    public float stageXCoord;
+    public Length stageXCoord;
 
     /** Y stage coordinates. */
-    public float stageYCoord;
+    public Length stageYCoord;
 
     /** Z stage coordinates. */
-    public float stageZCoord;
+    public Length stageZCoord;
 
     /** Minimum intensity */
     public float minInten;
@@ -2274,10 +2302,29 @@ public class DeltavisionReader extends FormatReader {
     /** Energy conversion factor. Usually 1. */
     public float energyConvFactor;
 
+    public Map<String, Object> asMap() {
+      Map<String, Object> rv = new HashMap<String, Object>();
+      rv.put("photosensorReading", photosensorReading);
+      rv.put("timeStampSeconds", timeStampSeconds);
+      rv.put("stageXCoord", stageXCoord);
+      rv.put("stageYCoord", stageYCoord);
+      rv.put("stageZCoord", stageZCoord);
+      rv.put("minInten", minInten);
+      rv.put("maxInten", maxInten);
+      rv.put("expTime", expTime);
+      rv.put("ndFilter", ndFilter);
+      rv.put("exWavelen", exWavelen);
+      rv.put("emWavelen", emWavelen);
+      rv.put("intenScaling", intenScaling);
+      rv.put("energyConvFactor", energyConvFactor);
+      return rv;
+    }
+
     /**
      * Helper function which overrides toString, printing out the values in
      * the header section.
      */
+    @Override
     public String toString() {
       StringBuffer sb = new StringBuffer();
       sb.append("photosensorReading: ");
@@ -2315,19 +2362,24 @@ public class DeltavisionReader extends FormatReader {
         // for ImageJ (http://rsb.info.nih.gov/ij/plugins/track/delta.html)
         photosensorReading = in.readFloat();
         timeStampSeconds = in.readFloat();
-        stageXCoord = in.readFloat();
-        stageYCoord = in.readFloat();
-        stageZCoord = in.readFloat();
+        stageXCoord = new Length(in.readFloat(), UNITS.REFERENCEFRAME);
+        stageYCoord = new Length(in.readFloat(), UNITS.REFERENCEFRAME);
+        stageZCoord = new Length(in.readFloat(), UNITS.REFERENCEFRAME);
         minInten = in.readFloat();
         maxInten = in.readFloat();
         in.skipBytes(4);
         expTime = in.readFloat();
 
-        ndFilter = in.readFloat() / 100;
+        ndFilter = in.readFloat();
         exWavelen = in.readFloat();
         emWavelen = in.readFloat();
         intenScaling = in.readFloat();
         energyConvFactor = in.readFloat();
+
+        // the stored value could be a percent fraction or a percentage
+        if (ndFilter >= 1) {
+          ndFilter /= 100;
+        }
       }
       catch (IOException e) {
         LOGGER.debug("Could not parse extended header", e);
