@@ -2,7 +2,7 @@
  * #%L
  * OME Bio-Formats package for reading and converting biological file formats.
  * %%
- * Copyright (C) 2005 - 2013 Open Microscopy Environment:
+ * Copyright (C) 2005 - 2014 Open Microscopy Environment:
  *   - Board of Regents of the University of Wisconsin-Madison
  *   - Glencoe Software, Inc.
  *   - University of Dundee
@@ -26,6 +26,7 @@
 package loci.formats.in;
 
 import java.io.ByteArrayInputStream;
+import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -35,6 +36,7 @@ import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.parsers.ParserConfigurationException;
 
+import loci.common.ByteArrayHandle;
 import loci.common.Constants;
 import loci.common.DateTools;
 import loci.common.Location;
@@ -62,6 +64,13 @@ import ome.xml.model.primitives.PositiveFloat;
 import ome.xml.model.primitives.PositiveInteger;
 import ome.xml.model.primitives.Timestamp;
 
+import ome.units.quantity.Length;
+import ome.units.quantity.Power;
+import ome.units.quantity.Pressure;
+import ome.units.quantity.Temperature;
+import ome.units.quantity.Time;
+import ome.units.UNITS;
+
 import org.xml.sax.SAXException;
 import org.w3c.dom.Attr;
 import org.w3c.dom.Document;
@@ -72,10 +81,6 @@ import org.w3c.dom.NodeList;
 
 /**
  * ZeissCZIReader is the file format reader for Zeiss .czi files.
- *
- * <dl><dt><b>Source code:</b></dt>
- * <dd><a href="http://trac.openmicroscopy.org.uk/ome/browser/bioformats.git/components/bio-formats/src/loci/formats/in/ZeissCZIReader.java">Trac</a>,
- * <a href="http://git.openmicroscopy.org/?p=bioformats.git;a=blob;f=components/bio-formats/src/loci/formats/in/ZeissCZIReader.java;hb=HEAD">Gitweb</a></dd></dl>
  */
 public class ZeissCZIReader extends FormatReader {
 
@@ -84,6 +89,7 @@ public class ZeissCZIReader extends FormatReader {
   private static final int ALIGNMENT = 32;
   private static final int HEADER_SIZE = 32;
   private static final String CZI_MAGIC_STRING = "ZISRAWFILE";
+  private static final int BUFFER_SIZE = 512;
 
   /** Compression constants. */
   private static final int UNCOMPRESSED = 0;
@@ -112,6 +118,8 @@ public class ZeissCZIReader extends FormatReader {
 
   private ArrayList<Segment> segments;
   private ArrayList<SubBlock> planes;
+  private HashMap<Coordinate, ArrayList<Integer>> indexIntoPlanes =
+    new HashMap<Coordinate, ArrayList<Integer>>();
   private int rotations = 1;
   private int positions = 1;
   private int illuminations = 1;
@@ -138,9 +146,9 @@ public class ZeissCZIReader extends FormatReader {
   private ArrayList<String> detectorRefs = new ArrayList<String>();
   private ArrayList<Double> timestamps = new ArrayList<Double>();
 
-  private Double[] positionsX;
-  private Double[] positionsY;
-  private Double[] positionsZ;
+  private Length[] positionsX;
+  private Length[] positionsY;
+  private Length[] positionsZ;
 
   private int previousChannel = 0;
 
@@ -166,6 +174,7 @@ public class ZeissCZIReader extends FormatReader {
   /**
    * @see loci.formats.IFormatReader#isThisType(RandomAccessInputStream)
    */
+  @Override
   public boolean isThisType(RandomAccessInputStream stream) throws IOException {
     final int blockLen = 10;
     if (!FormatTools.validStream(stream, blockLen, true)) return false;
@@ -176,13 +185,14 @@ public class ZeissCZIReader extends FormatReader {
   /**
    * @see loci.formats.IFormatReader#getSeriesUsedFiles(boolean)
    */
+  @Override
   public String[] getSeriesUsedFiles(boolean noPixels) {
     FormatTools.assertId(currentId, true, 1);
-    if (pixels.size() == 0 && noPixels) {
+    if (pixels == null || pixels.size() == 0 && noPixels) {
       return null;
     }
     else if (noPixels) {
-      return new String[] {currentId};
+      return null;
     }
     String[] files = new String[pixels.size() + 1];
     files[0] = currentId;
@@ -195,6 +205,7 @@ public class ZeissCZIReader extends FormatReader {
   }
 
   /* @see loci.formats.IFormatReader#get8BitLookupTable() */
+  @Override
   public byte[][] get8BitLookupTable() throws FormatException, IOException {
     if ((getPixelType() != FormatTools.INT8 &&
       getPixelType() != FormatTools.UINT8) || previousChannel == -1 ||
@@ -231,6 +242,7 @@ public class ZeissCZIReader extends FormatReader {
   }
 
   /* @see loci.formats.IFormatReader#get16BitLookupTable() */
+  @Override
   public short[][] get16BitLookupTable() throws FormatException, IOException {
     if ((getPixelType() != FormatTools.INT16 &&
       getPixelType() != FormatTools.UINT16) || previousChannel == -1 ||
@@ -273,6 +285,7 @@ public class ZeissCZIReader extends FormatReader {
   /**
    * @see loci.formats.IFormatReader#openBytes(int, byte[], int, int, int, int)
    */
+  @Override
   public byte[] openBytes(int no, byte[] buf, int x, int y, int w, int h)
     throws FormatException, IOException
   {
@@ -287,86 +300,116 @@ public class ZeissCZIReader extends FormatReader {
     int currentX = 0;
     int currentY = 0;
 
-    int pixel =
-      getRGBChannelCount() * FormatTools.getBytesPerPixel(getPixelType());
+    int bpp = FormatTools.getBytesPerPixel(getPixelType());
+    int pixel = getRGBChannelCount() * bpp;
     int outputRowLen = w * pixel;
 
     int outputRow = 0, outputCol = 0;
 
     boolean validScanDim =
       scanDim == (getImageCount() / getSizeC()) && scanDim > 1;
+    if (planes.size() == getImageCount()) {
+      validScanDim = false;
+    }
+    int previousHeight = 0;
 
-    for (SubBlock plane : planes) {
-      if ((plane.seriesIndex == currentSeries && plane.planeIndex == no) ||
-        (plane.planeIndex == previousChannel && validScanDim))
-      {
-        byte[] rawData = plane.readPixelData();
+    Arrays.fill(buf, (byte) 0);
+    RandomAccessInputStream stream = new RandomAccessInputStream(currentId);
+    try {
+      for (SubBlock plane : planes) {
+        if ((plane.seriesIndex == currentSeries && plane.planeIndex == no) ||
+          (plane.planeIndex == previousChannel && validScanDim))
+        {
+          byte[] rawData = new SubBlock(plane).readPixelData();
 
-        if ((prestitched != null && prestitched) || validScanDim) {
-          int realX = plane.x;
-          int realY = plane.y;
+          if ((prestitched != null && prestitched) || validScanDim) {
+            int realX = plane.x;
+            int realY = plane.y;
 
-          if (prestitched == null) {
-            currentY = 0;
-          }
-
-          Region tile =
-            new Region(currentX, getSizeY() - currentY - realY, realX, realY);
-          if (validScanDim) {
-            tile.y += (no / getSizeC());
-            image.height = scanDim;
-          }
-
-          if (tile.intersects(image)) {
-            Region intersection = tile.intersection(image);
-            int intersectionX = 0;
-
-            if (tile.x < image.x) {
-              intersectionX = image.x - tile.x;
+            if (prestitched == null) {
+              currentY = 0;
             }
 
-            int rowLen = pixel * (int) Math.min(intersection.width, realX);
-            int outputOffset = outputRow * outputRowLen + outputCol;
-            for (int trow=0; trow<intersection.height; trow++) {
-              int realRow = trow + intersection.y - tile.y;
-              if (validScanDim) {
-                realRow += tile.y;
+            Region tile = new Region(plane.col, plane.row, realX, realY);
+            if (validScanDim) {
+              tile.y += (no / getSizeC());
+              image.height = scanDim;
+            }
+
+            if (tile.intersects(image)) {
+              Region intersection = tile.intersection(image);
+              int intersectionX = 0;
+
+              if (tile.x < image.x) {
+                intersectionX = image.x - tile.x;
               }
-              int inputOffset = pixel * (realRow * realX + intersectionX);
-              System.arraycopy(
-                rawData, inputOffset, buf, outputOffset, rowLen);
-              outputOffset += outputRowLen;
+
+              if (tile.x == 0 && outputCol > 0) {
+                outputCol = 0;
+                outputRow += previousHeight;
+              }
+
+              int rowLen = pixel * (int) Math.min(intersection.width, realX);
+              int outputOffset = outputRow * outputRowLen + outputCol;
+              for (int trow=0; trow<intersection.height; trow++) {
+                int realRow = trow + intersection.y - tile.y;
+                if (validScanDim) {
+                  realRow += tile.y;
+                }
+                int inputOffset = pixel * (realRow * realX + intersectionX);
+                System.arraycopy(
+                  rawData, inputOffset, buf, outputOffset, rowLen);
+                outputOffset += outputRowLen;
+              }
+
+              outputCol += rowLen;
+              if (outputCol >= w * pixel) {
+                outputCol = 0;
+                outputRow += intersection.height;
+              }
+              previousHeight = intersection.height;
             }
 
-            outputCol += rowLen;
-            if (outputCol >= w * pixel) {
-              outputCol = 0;
-              outputRow += intersection.height;
+            currentX += realX;
+            if (currentX >= getSizeX()) {
+              currentX = 0;
+              currentY += realY;
             }
           }
-
-          currentX += realX;
-          if (currentX >= getSizeX()) {
-            currentX = 0;
-            currentY += realY;
+          else {
+            RandomAccessInputStream s = new RandomAccessInputStream(rawData);
+            try {
+              readPlane(s, x, y, w, h, buf);
+            }
+            finally {
+              s.close();
+            }
+            break;
           }
         }
-        else {
-          RandomAccessInputStream s = new RandomAccessInputStream(rawData);
-          try {
-            readPlane(s, x, y, w, h, buf);
-          }
-          finally {
-            s.close();
-          }
-          break;
+      }
+    } finally {
+        stream.close();
+    }
+
+    if (isRGB()) {
+      // channels are stored in BGR order; red and blue channels need switching
+      for (int i=0; i<buf.length/(getRGBChannelCount()*bpp); i++) {
+        for (int b=0; b<bpp; b++) {
+          int blueIndex = i * getRGBChannelCount() * bpp + b;
+          int redIndex = i * getRGBChannelCount() * bpp + bpp * 2 + b;
+          byte red = buf[redIndex];
+          buf[redIndex] = buf[blueIndex];
+          buf[blueIndex] = red;
         }
       }
     }
+
     return buf;
   }
 
   /* @see loci.formats.IFormatReader#close(boolean) */
+  @Override
   public void close(boolean fileOnly) throws IOException {
     super.close(fileOnly);
     if (!fileOnly) {
@@ -418,14 +461,36 @@ public class ZeissCZIReader extends FormatReader {
       rotationLabels = null;
       illuminationLabels = null;
       phaseLabels = null;
+      indexIntoPlanes.clear();
     }
   }
 
   // -- Internal FormatReader API methods --
 
   /* @see loci.formats.FormatReader#initFile(String) */
+  @Override
   protected void initFile(String id) throws FormatException, IOException {
     super.initFile(id);
+
+    // switch to the master file if this is part of a multi-file dataset
+    String base = id.substring(0, id.lastIndexOf("."));
+    if (base.endsWith(")") && isGroupFiles()) {
+      LOGGER.info("Checking for master file");
+      int lastFileSeparator = base.lastIndexOf(File.separator);
+      int end = base.lastIndexOf(" (");
+      if (end < 0 || end < lastFileSeparator) {
+        end = base.lastIndexOf("(");
+      }
+      if (end > 0 && end > lastFileSeparator) {
+        base = base.substring(0, end) + ".czi";
+        if (new Location(base).exists()) {
+          LOGGER.info("Initializing master file {}", base);
+          initFile(base);
+          return;
+        }
+      }
+    }
+
     CoreMetadata ms0 = core.get(0);
 
     ms0.littleEndian = true;
@@ -449,7 +514,7 @@ public class ZeissCZIReader extends FormatReader {
     // for all files with a matching name
 
     Location file = new Location(id).getAbsoluteFile();
-    String base = file.getName();
+    base = file.getName();
     base = base.substring(0, base.lastIndexOf("."));
 
     Location parent = file.getParentFile();
@@ -469,6 +534,20 @@ public class ZeissCZIReader extends FormatReader {
     }
 
     calculateDimensions();
+
+    if (getSizeC() == 0) {
+      ms0.sizeC = 1;
+    }
+    if (getSizeZ() == 0) {
+      ms0.sizeZ = 1;
+    }
+    if (getSizeT() == 0) {
+      ms0.sizeT = 1;
+    }
+    if (getImageCount() == 0) {
+      ms0.imageCount = ms0.sizeZ * ms0.sizeT;
+    }
+
     convertPixelType(planes.get(0).directoryEntry.pixelType);
 
     // remove any invalid SubBlocks
@@ -479,6 +558,9 @@ public class ZeissCZIReader extends FormatReader {
       if (planes.get(i).directoryEntry.compression == UNCOMPRESSED) {
         long size = planes.get(i).dataSize;
         if (size < planeSize || planeSize >= Integer.MAX_VALUE || size < 0) {
+          LOGGER.trace(
+            "removing block #{}; calculated size = {}, recorded size = {}",
+            i, planeSize, size);
           planes.remove(i);
           i--;
         }
@@ -489,6 +571,9 @@ public class ZeissCZIReader extends FormatReader {
       else {
         byte[] pixels = planes.get(i).readPixelData();
         if (pixels.length < planeSize || planeSize >= Integer.MAX_VALUE) {
+          LOGGER.trace(
+            "removing block #{}; calculated size = {}, decoded size = {}",
+            i, planeSize, pixels.length);
           planes.remove(i);
           i--;
         }
@@ -513,6 +598,15 @@ public class ZeissCZIReader extends FormatReader {
     // illuminations -> modulo C
     // phases -> modulo T
 
+    LOGGER.trace("rotations = {}", rotations);
+    LOGGER.trace("illuminations = {}", illuminations);
+    LOGGER.trace("phases = {}", phases);
+
+    LOGGER.trace("positions = {}", positions);
+    LOGGER.trace("acquisitions = {}", acquisitions);
+    LOGGER.trace("mosaics = {}", mosaics);
+    LOGGER.trace("angles = {}", angles);
+
     ms0.moduloZ.step = ms0.sizeZ;
     ms0.moduloZ.end = ms0.sizeZ * (rotations - 1);
     ms0.moduloZ.type = FormatTools.ROTATION;
@@ -535,6 +629,15 @@ public class ZeissCZIReader extends FormatReader {
 
     ms0.imageCount = getSizeZ() * (isRGB() ? 1 : getSizeC()) * getSizeT();
 
+    LOGGER.trace("Size Z = {}", getSizeZ());
+    LOGGER.trace("Size C = {}", getSizeC());
+    LOGGER.trace("Size T = {}", getSizeT());
+    LOGGER.trace("is RGB = {}", isRGB());
+    LOGGER.trace("calculated image count = {}", ms0.imageCount);
+    LOGGER.trace("number of available planes = {}", planes.size());
+    LOGGER.trace("prestitched = {}", prestitched);
+    LOGGER.trace("scanDim = {}", scanDim);
+
     if (mosaics == seriesCount &&
       seriesCount == (planes.size() / getImageCount()) &&
       prestitched != null && prestitched)
@@ -547,14 +650,23 @@ public class ZeissCZIReader extends FormatReader {
     if (ms0.imageCount * seriesCount > planes.size() * scanDim &&
       planes.size() > 0)
     {
-      if ((planes.size() % (seriesCount * getSizeZ())) == 0) {
-        ms0.sizeT = 1;
+      if (planes.size() != ms0.imageCount && planes.size() != ms0.sizeT &&
+        (planes.size() % (seriesCount * getSizeZ())) == 0)
+      {
+        if (!isGroupFiles() && planes.size() == (ms0.imageCount * seriesCount) / positions) {
+          seriesCount /= positions;
+          positions = 1;
+        }
       }
-      else if ((planes.size() % (seriesCount * getSizeT())) == 0) {
-        ms0.sizeZ = 1;
+      else if (planes.size() == ms0.sizeT || planes.size() == ms0.imageCount ||
+        (!isGroupFiles() && positions > 1))
+      {
+        positions = 1;
+        acquisitions = 1;
+        mosaics = 1;
+        angles = 1;
+        seriesCount = 1;
       }
-      ms0.imageCount = getSizeZ() * (isRGB() ? 1 : getSizeC()) * getSizeT();
-      seriesCount = planes.size() / ms0.imageCount;
     }
 
     if (seriesCount > 1) {
@@ -570,11 +682,26 @@ public class ZeissCZIReader extends FormatReader {
 
     store = makeFilterMetadata();
     MetadataTools.populatePixels(store, this, true);
+
+    String firstXML = null;
+    boolean canSkipXML = true;
+    String currentPath = new Location(currentId).getAbsolutePath();
     for (Segment segment : segments) {
-      if (segment instanceof Metadata) {
+      String path = new Location(segment.filename).getAbsolutePath();
+      if (currentPath.equals(path) && segment instanceof Metadata) {
+        segment.fillInData();
         String xml = ((Metadata) segment).xml;
         xml = XMLTools.sanitizeXML(xml);
-        translateMetadata(xml);
+        if (firstXML == null && canSkipXML) {
+          firstXML = xml;
+        }
+        if (canSkipXML && firstXML.equals(xml)) {
+          translateMetadata(xml);
+        }
+        else if (!firstXML.equals(xml)) {
+          canSkipXML = false;
+        }
+        ((Metadata) segment).clearXML();
       }
       else if (segment instanceof Attachment) {
         AttachmentEntry entry = ((Attachment) segment).attachment;
@@ -594,6 +721,7 @@ public class ZeissCZIReader extends FormatReader {
           }
         }
       }
+      segment.close();
     }
 
     if (rotationLabels != null) {
@@ -610,6 +738,17 @@ public class ZeissCZIReader extends FormatReader {
     }
 
     assignPlaneIndices();
+
+    for (int i=0; i<planes.size(); i++) {
+      SubBlock p = planes.get(i);
+      Coordinate c = new Coordinate(p.seriesIndex, p.planeIndex, getImageCount());
+      ArrayList<Integer> indices = new ArrayList<Integer>();
+      if (indexIntoPlanes.containsKey(c)) {
+        indices = indexIntoPlanes.get(c);
+      }
+      indices.add(i);
+      indexIntoPlanes.put(c, indices);
+    }
 
     if (channels.size() > 0 && channels.get(0).color != null) {
       for (int i=0; i<seriesCount; i++) {
@@ -631,6 +770,7 @@ public class ZeissCZIReader extends FormatReader {
       name = imageName;
     }
 
+    int indexLength = String.valueOf(getSeriesCount()).length();
     for (int i=0; i<getSeriesCount(); i++) {
       store.setImageInstrumentRef(MetadataTools.createLSID("Instrument", 0), i);
       if (acquiredDate != null) {
@@ -645,13 +785,19 @@ public class ZeissCZIReader extends FormatReader {
       if (experimenterID != null) {
         store.setImageExperimenterRef(experimenterID, i);
       }
-      store.setImageName(name + " #" + (i + 1), i);
+
+      String imageIndex = String.valueOf(i + 1);
+      while (imageIndex.length() < indexLength) {
+        imageIndex = "0" + imageIndex;
+      }
+      store.setImageName(name + " #" + imageIndex, i);
       if (description != null && description.length() > 0) {
         store.setImageDescription(description, i);
       }
 
       if (airPressure != null) {
-        store.setImagingEnvironmentAirPressure(new Double(airPressure), i);
+        store.setImagingEnvironmentAirPressure(
+                new Pressure(new Double(airPressure), UNITS.MBAR), i);
       }
       if (co2Percent != null) {
         store.setImagingEnvironmentCO2Percent(
@@ -662,7 +808,8 @@ public class ZeissCZIReader extends FormatReader {
           PercentFraction.valueOf(humidity), i);
       }
       if (temperature != null) {
-        store.setImagingEnvironmentTemperature(new Double(temperature), i);
+        store.setImagingEnvironmentTemperature(new Temperature(
+                new Double(temperature), UNITS.DEGREEC), i);
       }
 
       if (objectiveSettingsID != null) {
@@ -686,52 +833,68 @@ public class ZeissCZIReader extends FormatReader {
         if (t != null)
           startTime = t.asInstant().getMillis() / 1000d;
       }
+
       for (int plane=0; plane<getImageCount(); plane++) {
-        for (SubBlock p : planes) {
-          if (p.seriesIndex == i && p.planeIndex == plane) {
-            if (startTime == null) {
-              startTime = p.timestamp;
-            }
+        Coordinate coordinate = new Coordinate(i, plane, getImageCount());
+        ArrayList<Integer> index = indexIntoPlanes.get(coordinate);
+        if (index == null) {
+          continue;
+        }
 
-            if (p.stageX != null) {
-              store.setPlanePositionX(p.stageX, i, plane);
-            }
-            else if (positionsX != null && i < positionsX.length) {
-              store.setPlanePositionX(positionsX[i], i, plane);
-            }
+        SubBlock p = planes.get(index.get(0));
+        if (startTime == null) {
+          startTime = p.timestamp;
+        }
 
-            if (p.stageY != null) {
-              store.setPlanePositionY(p.stageY, i, plane);
-            }
-            else if (positionsY != null && i < positionsY.length) {
-              store.setPlanePositionY(positionsY[i], i, plane);
-            }
+        if (p.stageX != null) {
+          store.setPlanePositionX(p.stageX, i, plane);
+        }
+        else if (positionsX != null && i < positionsX.length &&
+          positionsX[i] != null)
+        {
+          store.setPlanePositionX(positionsX[i], i, plane);
+        }
+        else {
+          store.setPlanePositionX(new Length(p.col, UNITS.REFERENCEFRAME), i, plane);
+        }
 
-            if (p.stageZ != null) {
-              store.setPlanePositionZ(p.stageZ, i, plane);
-            }
-            else if (positionsZ != null && i < positionsZ.length) {
-              store.setPlanePositionZ(positionsZ[i], i, plane);
-            }
+        if (p.stageY != null) {
+          store.setPlanePositionY(p.stageY, i, plane);
+        }
+        else if (positionsY != null && i < positionsY.length &&
+          positionsY[i] != null)
+        {
+          store.setPlanePositionY(positionsY[i], i, plane);
+        }
+        else {
+          store.setPlanePositionY(new Length(p.row, UNITS.REFERENCEFRAME), i, plane);
+        }
 
-            if (p.timestamp != null) {
-              store.setPlaneDeltaT(p.timestamp - startTime, i, plane);
-            }
-            else if (plane < timestamps.size()) {
-              store.setPlaneDeltaT(timestamps.get(plane), i, plane);
-            }
-            if (p.exposureTime != null) {
-              store.setPlaneExposureTime(p.exposureTime, i, plane);
-            }
-            else {
-              int channel = getZCTCoords(plane)[1];
-              if (channel < channels.size() &&
-                channels.get(channel).exposure != null)
-              {
-                store.setPlaneExposureTime(
-                  channels.get(channel).exposure, i, plane);
-              }
-            }
+        if (p.stageZ != null) {
+          store.setPlanePositionZ(p.stageZ, i, plane);
+        }
+        else if (positionsZ != null && i < positionsZ.length) {
+          store.setPlanePositionZ(positionsZ[i], i, plane);
+        }
+
+        if (p.timestamp != null) {
+          store.setPlaneDeltaT(new Time(p.timestamp - startTime, UNITS.S), i, plane);
+        }
+        else if (plane < timestamps.size()) {
+           if (timestamps.get(plane) != null) {
+             store.setPlaneDeltaT(new Time(timestamps.get(plane), UNITS.S), i, plane);
+           }
+        }
+        if (p.exposureTime != null) {
+          store.setPlaneExposureTime(new Time(p.exposureTime, UNITS.S), i, plane);
+        }
+        else {
+          int channel = getZCTCoords(plane)[1];
+          if (channel < channels.size() &&
+            channels.get(channel).exposure != null)
+          {
+            store.setPlaneExposureTime(
+              new Time(channels.get(channel).exposure, UNITS.S), i, plane);
           }
         }
       }
@@ -740,6 +903,7 @@ public class ZeissCZIReader extends FormatReader {
         if (c < channels.size()) {
           store.setChannelName(channels.get(c).name, i, c);
           store.setChannelFluor(channels.get(c).fluor, i, c);
+          store.setChannelFilterSetRef(channels.get(c).filterSetRef, i, c);
 
           String color = channels.get(c).color;
           if (color != null) {
@@ -757,8 +921,7 @@ public class ZeissCZIReader extends FormatReader {
           String emWave = channels.get(c).emission;
           if (emWave != null) {
             Double wave = new Double(emWave);
-            PositiveInteger em =
-              FormatTools.getEmissionWavelength(wave.intValue());
+            Length em = FormatTools.getEmissionWavelength(wave);
             if (em != null) {
               store.setChannelEmissionWavelength(em, i, c);
             }
@@ -766,8 +929,7 @@ public class ZeissCZIReader extends FormatReader {
           String exWave = channels.get(c).excitation;
           if (exWave != null) {
             Double wave = new Double(exWave);
-            PositiveInteger ex =
-              FormatTools.getExcitationWavelength(wave.intValue());
+            Length ex = FormatTools.getExcitationWavelength(wave);
             if (ex != null) {
               store.setChannelExcitationWavelength(ex, i, c);
             }
@@ -780,7 +942,7 @@ public class ZeissCZIReader extends FormatReader {
 
           if (channels.get(c).pinhole != null) {
             store.setChannelPinholeSize(
-              new Double(channels.get(c).pinhole), i, c);
+              new Length(new Double(channels.get(c).pinhole), UNITS.MICROM), i, c);
           }
 
           if (channels.get(c).acquisitionMode != null) {
@@ -808,6 +970,9 @@ public class ZeissCZIReader extends FormatReader {
         }
       }
     }
+
+    // not needed by further calls on the reader
+    segments = null;
   }
 
   // -- Helper methods --
@@ -816,21 +981,27 @@ public class ZeissCZIReader extends FormatReader {
     if (in != null) {
       in.close();
     }
-    in = new RandomAccessInputStream(id);
+    in = new RandomAccessInputStream(id, BUFFER_SIZE);
     in.order(isLittleEndian());
     while (in.getFilePointer() < in.length()) {
       Segment segment = readSegment(id);
+      if (segment == null) {
+        break;
+      }
       segments.add(segment);
 
       if (segment instanceof SubBlock) {
         planes.add((SubBlock) segment);
       }
+      segment.close();
     }
   }
 
   private void calculateDimensions() {
     // calculate the dimensions
     CoreMetadata ms0 = core.get(0);
+
+    ArrayList<Integer> uniqueT = new ArrayList<Integer>();
 
     for (SubBlock plane : planes) {
       for (DimensionEntry dimension : plane.directoryEntry.dimensionEntries) {
@@ -840,6 +1011,7 @@ public class ZeissCZIReader extends FormatReader {
         switch (dimension.dimension.charAt(0)) {
           case 'X':
             plane.x = dimension.size;
+            plane.col = dimension.start;
             if ((prestitched == null || prestitched) &&
               getSizeX() > 0 && dimension.size != getSizeX())
             {
@@ -850,6 +1022,7 @@ public class ZeissCZIReader extends FormatReader {
             break;
           case 'Y':
             plane.y = dimension.size;
+            plane.row = dimension.start;
             if ((prestitched == null || prestitched) &&
               getSizeY() > 0 && dimension.size != getSizeY())
             {
@@ -872,8 +1045,9 @@ public class ZeissCZIReader extends FormatReader {
             }
             break;
           case 'T':
-            if (dimension.start >= getSizeT()) {
-              ms0.sizeT = dimension.start + 1;
+            if (!uniqueT.contains(dimension.start)) {
+              uniqueT.add(dimension.start);
+              ms0.sizeT = uniqueT.size();
             }
             if (dimension.size > getSizeT()) {
               ms0.sizeT = dimension.size;
@@ -922,9 +1096,11 @@ public class ZeissCZIReader extends FormatReader {
   }
 
   private void assignPlaneIndices() {
+    LOGGER.trace("assignPlaneIndices:");
     // assign plane and series indices to each SubBlock
 
     if (getSeriesCount() == mosaics) {
+      LOGGER.trace("  reset position, acquisition, and angle count");
       positions = 1;
       acquisitions = 1;
       angles = 1;
@@ -933,6 +1109,7 @@ public class ZeissCZIReader extends FormatReader {
     int[] extraLengths = {positions, acquisitions, mosaics, angles};
 
     for (int p=0; p<planes.size(); p++) {
+      LOGGER.trace("  processing plane #{} of {}", p, planes.size());
       SubBlock plane = planes.get(p);
       int z = 0;
       int c = 0;
@@ -944,6 +1121,9 @@ public class ZeissCZIReader extends FormatReader {
 
       boolean noAngle = true;
       for (DimensionEntry dimension : plane.directoryEntry.dimensionEntries) {
+        LOGGER.trace("    procession dimension '{}'", dimension.dimension);
+        LOGGER.trace("      dimension size = {}", dimension.size);
+        LOGGER.trace("      dimension start = {}", dimension.start);
         if (dimension == null) {
           continue;
         }
@@ -959,7 +1139,7 @@ public class ZeissCZIReader extends FormatReader {
             break;
           case 'T':
             t = dimension.start;
-            if (t > getSizeT()) {
+            if (t >= getSizeT()) {
               t = getSizeT() - 1;
             }
             break;
@@ -1016,6 +1196,8 @@ public class ZeissCZIReader extends FormatReader {
 
       plane.planeIndex = getIndex(z, c, t);
       plane.seriesIndex = FormatTools.positionToRaster(extraLengths, extra);
+      LOGGER.trace("    assigned plane index = {}; series index = {}",
+        plane.planeIndex, plane.seriesIndex);
     }
   }
 
@@ -1096,6 +1278,9 @@ public class ZeissCZIReader extends FormatReader {
       Element dimensions = getFirstNode(image, "Dimensions");
 
       NodeList channelNodes = getGrandchildren(dimensions, "Channel");
+      if (channelNodes == null) {
+        channelNodes = image.getElementsByTagName("Channel");
+      }
 
       if (channelNodes != null) {
         for (int i=0; i<channelNodes.getLength(); i++) {
@@ -1146,6 +1331,11 @@ public class ZeissCZIReader extends FormatReader {
               detectorID = "Detector:" + detectorID;
             }
             detectorRefs.add(detectorID);
+          }
+
+          Element filterSet = getFirstNode(channel, "FilterSetRef");
+          if (filterSet != null) {
+            channels.get(i).filterSetRef = filterSet.getAttribute("Id");
           }
         }
       }
@@ -1210,7 +1400,7 @@ public class ZeissCZIReader extends FormatReader {
           String power = getFirstNodeValue(lightSource, "Power");
           if ("Laser".equals(type)) {
             if (power != null) {
-              store.setLaserPower(new Double(power), 0, i);
+              store.setLaserPower(new Power(new Double(power), UNITS.MW), 0, i);
             }
             store.setLaserLotNumber(lotNumber, 0, i);
             store.setLaserManufacturer(manufacturer, 0, i);
@@ -1219,7 +1409,7 @@ public class ZeissCZIReader extends FormatReader {
           }
           else if ("Arc".equals(type)) {
             if (power != null) {
-              store.setArcPower(new Double(power), 0, i);
+              store.setArcPower(new Power(new Double(power), UNITS.MW), 0, i);
             }
             store.setArcLotNumber(lotNumber, 0, i);
             store.setArcManufacturer(manufacturer, 0, i);
@@ -1228,7 +1418,7 @@ public class ZeissCZIReader extends FormatReader {
           }
           else if ("LightEmittingDiode".equals(type)) {
             if (power != null) {
-              store.setLightEmittingDiodePower(new Double(power), 0, i);
+              store.setLightEmittingDiodePower(new Power(new Double(power), UNITS.MW), 0, i);
             }
             store.setLightEmittingDiodeLotNumber(lotNumber, 0, i);
             store.setLightEmittingDiodeManufacturer(manufacturer, 0, i);
@@ -1237,7 +1427,7 @@ public class ZeissCZIReader extends FormatReader {
           }
           else if ("Filament".equals(type)) {
             if (power != null) {
-              store.setFilamentPower(new Double(power), 0, i);
+              store.setFilamentPower(new Power(new Double(power), UNITS.MW), 0, i);
             }
             store.setFilamentLotNumber(lotNumber, 0, i);
             store.setFilamentManufacturer(manufacturer, 0, i);
@@ -1277,29 +1467,29 @@ public class ZeissCZIReader extends FormatReader {
           if (gain == null) {
             gain = getFirstNodeValue(detector, "Gain");
           }
-          if (gain != null) {
+          if (gain != null && !gain.equals("")) {
             store.setDetectorGain(new Double(gain), 0, i);
           }
 
           String offset = getFirstNodeValue(detector, "Offset");
-          if (offset != null) {
+          if (offset != null && !offset.equals("")) {
             store.setDetectorOffset(new Double(offset), 0, i);
           }
 
           if (zoom == null) {
             zoom = getFirstNodeValue(detector, "Zoom");
           }
-          if (zoom != null) {
+          if (zoom != null && !zoom.equals("")) {
             store.setDetectorZoom(new Double(zoom), 0, i);
           }
 
           String ampGain = getFirstNodeValue(detector, "AmplificationGain");
-          if (ampGain != null) {
+          if (ampGain != null && !ampGain.equals("")) {
             store.setDetectorAmplificationGain(new Double(ampGain), 0, i);
           }
 
           String detectorType = getFirstNodeValue(detector, "Type");
-          if (detectorType != null) {
+          if (detectorType != null && !detectorType.equals("")) {
             store.setDetectorType(getDetectorType(detectorType), 0, i);
           }
         }
@@ -1321,25 +1511,46 @@ public class ZeissCZIReader extends FormatReader {
             getFirstNodeValue(manufacturerNode, "SerialNumber");
           String lotNumber = getFirstNodeValue(manufacturerNode, "LotNumber");
 
-          store.setFilterSetID(filterSet.getAttribute("Id"), 0, i);
-          store.setFilterSetManufacturer(manufacturer, 0, i);
-          store.setFilterSetModel(model, 0, i);
-          store.setFilterSetSerialNumber(serialNumber, 0, i);
-          store.setFilterSetLotNumber(lotNumber, 0, i);
-
           String dichroicRef = getFirstNodeValue(filterSet, "DichroicRef");
-          if (dichroicRef != null && dichroicRef.length() > 0) {
-            store.setFilterSetDichroicRef(dichroicRef, 0, i);
-          }
-
           NodeList excitations = getGrandchildren(
             filterSet, "ExcitationFilters", "ExcitationFilterRef");
           NodeList emissions = getGrandchildren(filterSet, "EmissionFilters",
             "EmissionFilterRef");
 
+          if (dichroicRef == null || dichroicRef.length() <= 0) {
+            Element ref = getFirstNode(filterSet, "DichroicRef");
+            if (ref != null) {
+              dichroicRef = ref.getAttribute("Id");
+            }
+          }
+
+          if (excitations == null) {
+            excitations = filterSet.getElementsByTagName("ExcitationFilterRef");
+          }
+
+          if (emissions == null) {
+            emissions = filterSet.getElementsByTagName("EmissionFilterRef");
+          }
+
+          if (dichroicRef != null || excitations != null || emissions != null) {
+            store.setFilterSetID(filterSet.getAttribute("Id"), 0, i);
+            store.setFilterSetManufacturer(manufacturer, 0, i);
+            store.setFilterSetModel(model, 0, i);
+            store.setFilterSetSerialNumber(serialNumber, 0, i);
+            store.setFilterSetLotNumber(lotNumber, 0, i);
+          }
+
+          if (dichroicRef != null && dichroicRef.length() > 0) {
+            store.setFilterSetDichroicRef(dichroicRef, 0, i);
+          }
+
           if (excitations != null) {
             for (int ex=0; ex<excitations.getLength(); ex++) {
-              String ref = excitations.item(ex).getTextContent();
+              Element excitation = (Element) excitations.item(ex);
+              String ref = excitation.getTextContent();
+              if (ref == null || ref.length() <= 0) {
+                ref = excitation.getAttribute("Id");
+              }
               if (ref != null && ref.length() > 0) {
                 store.setFilterSetExcitationFilterRef(ref, 0, i, ex);
               }
@@ -1347,7 +1558,11 @@ public class ZeissCZIReader extends FormatReader {
           }
           if (emissions != null) {
             for (int em=0; em<emissions.getLength(); em++) {
-              String ref = emissions.item(em).getTextContent();
+              Element emission = (Element) emissions.item(em);
+              String ref = emission.getTextContent();
+              if (ref == null || ref.length() <= 0) {
+                ref = emission.getAttribute("Id");
+              }
               if (ref != null && ref.length() > 0) {
                 store.setFilterSetEmissionFilterRef(ref, 0, i, em);
               }
@@ -1386,11 +1601,11 @@ public class ZeissCZIReader extends FormatReader {
 
           String cutIn = getFirstNodeValue(transmittance, "CutIn");
           String cutOut = getFirstNodeValue(transmittance, "CutOut");
-          Integer inWave = cutIn == null ? 0 : new Integer(cutIn);
-          Integer outWave = cutOut == null ? 0 : new Integer(cutOut);
+          Double inWave = cutIn == null ? 0 : new Double(cutIn);
+          Double outWave = cutOut == null ? 0 : new Double(cutOut);
 
-          PositiveInteger in = FormatTools.getCutIn(inWave);
-          PositiveInteger out = FormatTools.getCutOut(outWave);
+          Length in = FormatTools.getCutIn(inWave);
+          Length out = FormatTools.getCutOut(outWave);
           if (in != null) {
             store.setTransmittanceRangeCutIn(in, 0, i);
           }
@@ -1404,15 +1619,15 @@ public class ZeissCZIReader extends FormatReader {
             getFirstNodeValue(transmittance, "CutOutTolerance");
 
           if (inTolerance != null) {
-            Integer cutInTolerance = new Integer(inTolerance);
+            Double cutInTolerance = new Double(inTolerance);
             store.setTransmittanceRangeCutInTolerance(
-              new NonNegativeInteger(cutInTolerance), 0, i);
+              new Length(cutInTolerance, UNITS.NM), 0, i);
           }
 
           if (outTolerance != null) {
-            Integer cutOutTolerance = new Integer(outTolerance);
+            Double cutOutTolerance = new Double(outTolerance);
             store.setTransmittanceRangeCutOutTolerance(
-              new NonNegativeInteger(cutOutTolerance), 0, i);
+              new Length(cutOutTolerance, UNITS.NM), 0, i);
           }
 
           String transmittancePercent =
@@ -1480,17 +1695,17 @@ public class ZeissCZIReader extends FormatReader {
 
           if (id.equals("X")) {
             for (int series=0; series<getSeriesCount(); series++) {
-              store.setPixelsPhysicalSizeX(size, series);
+              store.setPixelsPhysicalSizeX(FormatTools.createLength(size, UNITS.MICROM), series);
             }
           }
           else if (id.equals("Y")) {
             for (int series=0; series<getSeriesCount(); series++) {
-              store.setPixelsPhysicalSizeY(size, series);
+              store.setPixelsPhysicalSizeY(FormatTools.createLength(size, UNITS.MICROM), series);
             }
           }
           else if (id.equals("Z")) {
             for (int series=0; series<getSeriesCount(); series++) {
-              store.setPixelsPhysicalSizeZ(size, series);
+              store.setPixelsPhysicalSizeZ(FormatTools.createLength(size, UNITS.MICROM), series);
             }
           }
         }
@@ -1799,7 +2014,7 @@ public class ZeissCZIReader extends FormatReader {
           }
           if (wd != null) {
             try {
-              store.setObjectiveWorkingDistance(new Double(wd), 0, i);
+              store.setObjectiveWorkingDistance(new Length(new Double(wd), UNITS.MICROM), 0, i);
             }
             catch (NumberFormatException e) {
               LOGGER.debug("Could not parse working distance", e);
@@ -1828,8 +2043,7 @@ public class ZeissCZIReader extends FormatReader {
         store.setRectangleID(
           MetadataTools.createLSID("Shape", roi, shape), roi, shape);
         store.setRectangleX(new Double(left), roi, shape);
-        store.setRectangleY(
-          new Double(getSizeY() - Double.parseDouble(top)), roi, shape);
+        store.setRectangleY(new Double(top), roi, shape);
         store.setRectangleWidth(new Double(width), roi, shape);
         store.setRectangleHeight(new Double(height), roi, shape);
 
@@ -1947,36 +2161,93 @@ public class ZeissCZIReader extends FormatReader {
     Element tilesSetup = getFirstNode(acquisition, "TilesSetup");
     NodeList groups = getGrandchildren(tilesSetup, "PositionGroup");
 
-    positionsX = new Double[core.size()];
-    positionsY = new Double[core.size()];
-    positionsZ = new Double[core.size()];
+    positionsX = new Length[core.size()];
+    positionsY = new Length[core.size()];
+    positionsZ = new Length[core.size()];
 
     if (groups != null) {
       for (int i=0; i<groups.getLength(); i++) {
         Element group = (Element) groups.item(i);
 
-        int tilesX = Integer.parseInt(getFirstNodeValue(group, "TilesX"));
-        int tilesY = Integer.parseInt(getFirstNodeValue(group, "TilesY"));
-
         Element position = getFirstNode(group, "Position");
+        if (position != null) {
+          int tilesX = Integer.parseInt(getFirstNodeValue(group, "TilesX"));
+          int tilesY = Integer.parseInt(getFirstNodeValue(group, "TilesY"));
 
-        String x = position.getAttribute("X");
-        String y = position.getAttribute("Y");
-        String z = position.getAttribute("Z");
+          String x = position.getAttribute("X");
+          String y = position.getAttribute("Y");
+          String z = position.getAttribute("Z");
 
-        Double xPos = x == null ? null : new Double(x);
-        Double yPos = y == null ? null : new Double(y);
-        Double zPos = z == null ? null : new Double(z);
+          Length xPos = null;
+          try {
+            xPos = new Length(Double.valueOf(x), UNITS.REFERENCEFRAME);
+          }
+          catch (NumberFormatException e) { }
+          Length yPos = null;
+          try {
+            yPos = new Length(Double.valueOf(y), UNITS.REFERENCEFRAME);
+          }
+          catch (NumberFormatException e) { }
+          Length zPos = null;
+          try {
+            zPos = new Length(Double.valueOf(z), UNITS.REFERENCEFRAME);
+          }
+          catch (NumberFormatException e) { }
 
-        for (int tile=0; tile<tilesX * tilesY; tile++) {
-          int index = i * tilesX * tilesY + tile;
-          if (index < positionsX.length) {
-            positionsX[index] = xPos;
-            positionsY[index] = yPos;
-            positionsZ[index] = zPos;
+          for (int tile=0; tile<tilesX * tilesY; tile++) {
+            int index = i * tilesX * tilesY + tile;
+            if (index < positionsX.length) {
+              positionsX[index] = xPos;
+              positionsY[index] = yPos;
+              positionsZ[index] = zPos;
+            }
           }
         }
       }
+    }
+    else {
+      Element regionsSetup = getFirstNode(acquisition, "RegionsSetup");
+
+      if (regionsSetup != null) {
+        Element sampleHolder = getFirstNode(regionsSetup, "SampleHolder");
+        if (sampleHolder != null) {
+          NodeList regions = getGrandchildren(sampleHolder,
+            "SingleTileRegionArray", "SingleTileRegion");
+          if (regions != null) {
+            for (int i=0; i<regions.getLength(); i++) {
+              Element region = (Element) regions.item(i);
+
+              String x = getFirstNode(region, "X").getTextContent();
+              String y = getFirstNode(region, "Y").getTextContent();
+              String z = getFirstNode(region, "Z").getTextContent();
+
+              // safe to assume all 3 arrays have the same length
+              if (i < positionsX.length) {
+                if (x == null) {
+                  positionsX[i] = null;
+                } else {
+                  final Double number = Double.valueOf(x);
+                  positionsX[i] = new Length(number, UNITS.REFERENCEFRAME);
+                }
+                if (y == null) {
+                  positionsY[i] = null;
+                } else {
+                  final Double number = Double.valueOf(y);
+                  positionsY[i] = new Length(number, UNITS.REFERENCEFRAME);
+                }
+                if (z == null) {
+                  positionsZ[i] = null;
+                } else {
+                  final Double number = Double.valueOf(z);
+                  positionsZ[i] = new Length(number, UNITS.REFERENCEFRAME);
+                }
+              }
+            }
+          }
+        }
+      }
+
+
     }
 
     NodeList detectors = getGrandchildren(acquisition, "Detector");
@@ -2097,6 +2368,9 @@ public class ZeissCZIReader extends FormatReader {
 
   private void populateOriginalMetadata(Element root, Stack<String> nameStack) {
     String name = root.getNodeName();
+    if (name.equals("DisplaySetting")) {
+      return;
+    }
     nameStack.push(name);
 
     StringBuffer key = new StringBuffer();
@@ -2110,7 +2384,11 @@ public class ZeissCZIReader extends FormatReader {
     if (root.getChildNodes().getLength() == 1) {
       String value = root.getTextContent();
       if (value != null && key.length() > 0) {
-        addGlobalMetaList(key.toString(), value);
+        String s = key.toString();
+        if (s.endsWith("|")){
+          s = s.substring(0, s.length() - 1);
+        }
+        addGlobalMetaList(s, value);
 
         if (key.toString().endsWith("|Rotations|")) {
           rotationLabels = value.split(" ");
@@ -2129,8 +2407,16 @@ public class ZeissCZIReader extends FormatReader {
 
       String attrName = attr.getNodeName();
       String attrValue = attr.getNodeValue();
+      
+      String keyString = key.toString();
+      if (attrName.endsWith("|")){
+        attrName = attrName.substring(0, attrName.length() - 1);
+      }
+      else if(attrName.length() == 0 && keyString.endsWith("|")) {
+        keyString = keyString.substring(0, keyString.length() - 1);
+      }
 
-      addGlobalMeta(key + attrName, attrValue);
+      addGlobalMetaList(keyString + attrName, attrValue);
     }
 
     NodeList children = root.getChildNodes();
@@ -2156,6 +2442,7 @@ public class ZeissCZIReader extends FormatReader {
     // instantiate a Segment subclass based upon the segment ID
     String segmentID = in.readString(16).trim();
     Segment segment = null;
+    boolean skipData = false;
 
     if (segmentID.equals("ZISRAWFILE")) {
       segment = new FileHeader();
@@ -2178,15 +2465,25 @@ public class ZeissCZIReader extends FormatReader {
     else if (segmentID.equals("DELETED")) {
       segment = new Segment();
     }
+    else if (segmentID.length() == 0) {
+      segment = new Segment();
+      skipData = true;
+    }
     else {
-      LOGGER.info("Unknown segment type: " + segmentID);
+      LOGGER.info("Unknown segment type: {}", segmentID);
       segment = new Segment();
     }
     segment.startingPosition = startingPosition;
     segment.id = segmentID;
     segment.filename = filename;
+    segment.stream = in;
 
-    segment.fillInData();
+    if (!(segment instanceof Metadata)) {
+      segment.fillInData();
+    }
+    else {
+      ((Metadata) segment).skipData(); 
+    }
 
     long pos = segment.startingPosition + segment.allocatedSize + HEADER_SIZE;
     if (pos < in.length()) {
@@ -2194,6 +2491,11 @@ public class ZeissCZIReader extends FormatReader {
     }
     else {
       in.seek(in.length());
+    }
+
+    if (skipData) {
+      segment.close();
+      return null;
     }
     return segment;
   }
@@ -2220,21 +2522,25 @@ public class ZeissCZIReader extends FormatReader {
         ms0.pixelType = FormatTools.UINT8;
         ms0.sizeC *= 3;
         ms0.rgb = true;
+        ms0.interleaved = true;
         break;
       case BGR_48:
         ms0.pixelType = FormatTools.UINT16;
         ms0.sizeC *= 3;
         ms0.rgb = true;
+        ms0.interleaved = true;
         break;
       case BGRA_8:
         ms0.pixelType = FormatTools.UINT8;
         ms0.sizeC *= 4;
         ms0.rgb = true;
+        ms0.interleaved = true;
         break;
       case BGR_FLOAT:
         ms0.pixelType = FormatTools.FLOAT;
         ms0.sizeC *= 3;
         ms0.rgb = true;
+        ms0.interleaved = true;
         break;
       case COMPLEX:
       case COMPLEX_FLOAT:
@@ -2242,6 +2548,7 @@ public class ZeissCZIReader extends FormatReader {
       default:
         throw new FormatException("Unknown pixel type: " + pixelType);
     }
+    ms0.interleaved = ms0.rgb;
   }
 
   private void parseObjectives(NodeList objectives) throws FormatException {
@@ -2296,7 +2603,7 @@ public class ZeissCZIReader extends FormatReader {
         }
         String wd = getFirstNodeValue(objective, "WorkingDistance");
         if (wd != null) {
-          store.setObjectiveWorkingDistance(new Double(wd), 0, i);
+          store.setObjectiveWorkingDistance(new Length(new Double(wd), UNITS.MICROM), 0, i);
         }
         String iris = getFirstNodeValue(objective, "Iris");
         if (iris != null) {
@@ -2315,9 +2622,28 @@ public class ZeissCZIReader extends FormatReader {
     public String id;
     public long allocatedSize;
     public long usedSize;
+    public RandomAccessInputStream stream;
+
+    public Segment() {
+      filename = null;
+      startingPosition = 0;
+      id = null;
+      allocatedSize = 0;
+      usedSize = 0;
+      stream = null;
+    }
+
+    public Segment(Segment model) {
+      super();
+      this.filename = model.filename;
+      this.startingPosition = model.startingPosition;
+      this.id = model.id;
+      this.allocatedSize = model.allocatedSize;
+      this.usedSize = model.usedSize;
+    }
 
     public void fillInData() throws IOException {
-      RandomAccessInputStream s = new RandomAccessInputStream(filename);
+      RandomAccessInputStream s = getStream();
       try {
         s.order(isLittleEndian());
         s.seek(startingPosition + 16);
@@ -2330,8 +2656,23 @@ public class ZeissCZIReader extends FormatReader {
         }
       }
       finally {
-        s.close();
+        if (stream == null) {
+          s.close();
+        }
       }
+    }
+
+    public void close() throws IOException {
+      // whatever created the Segment is responsible for closing the stream
+      // we just need to remove the reference
+      stream = null;
+    }
+
+    public RandomAccessInputStream getStream() throws IOException {
+      if (stream != null) {
+        return stream;
+      }
+      return new RandomAccessInputStream(filename, BUFFER_SIZE);
     }
   }
 
@@ -2347,10 +2688,11 @@ public class ZeissCZIReader extends FormatReader {
     public boolean updatePending;
     public long attachmentDirectoryPosition;
 
+    @Override
     public void fillInData() throws IOException {
       super.fillInData();
 
-      RandomAccessInputStream s = new RandomAccessInputStream(filename);
+      RandomAccessInputStream s = getStream();
       try {
         s.order(isLittleEndian());
         s.seek(startingPosition + HEADER_SIZE);
@@ -2368,7 +2710,9 @@ public class ZeissCZIReader extends FormatReader {
         attachmentDirectoryPosition = s.readLong();
       }
       finally {
-        s.close();
+        if (stream == null) {
+          s.close();
+        }
       }
     }
   }
@@ -2378,12 +2722,17 @@ public class ZeissCZIReader extends FormatReader {
     public String xml;
     public byte[] attachment;
 
+    public void skipData() throws IOException {
+      super.fillInData();
+    }
+
+    @Override
     public void fillInData() throws IOException {
       super.fillInData();
 
-      RandomAccessInputStream s = new RandomAccessInputStream(filename);
+      RandomAccessInputStream s = getStream();
       try {
-        s.order(isLittleEndian());
+        s.order(true);
         s.seek(startingPosition + HEADER_SIZE);
         int xmlSize = s.readInt();
         int attachmentSize = s.readInt();
@@ -2395,8 +2744,14 @@ public class ZeissCZIReader extends FormatReader {
         s.read(attachment);
       }
       finally {
-        s.close();
+        if (stream == null) {
+          s.close();
+        }
       }
+    }
+
+    public void clearXML() {
+      xml = null;
     }
   }
 
@@ -2413,14 +2768,40 @@ public class ZeissCZIReader extends FormatReader {
 
     private long dataOffset;
 
-    private Double stageX, stageY, timestamp, exposureTime, stageZ;
+    private Length stageX, stageY, stageZ;
+    private Double timestamp, exposureTime;
 
     public int x, y;
+    public int row, col;
 
+    public SubBlock() {
+      super();
+    }
+
+    public SubBlock(SubBlock model) {
+      super(model);
+      this.metadataSize = model.metadataSize;
+      this.attachmentSize = model.attachmentSize;
+      this.dataSize = model.dataSize;
+      this.directoryEntry = model.directoryEntry;
+      this.metadata = model.metadata;
+      this.seriesIndex = model.seriesIndex;
+      this.planeIndex = model.planeIndex;
+      this.dataOffset = model.dataOffset;
+      this.stageX = model.stageX;
+      this.stageY = model.stageY;
+      this.timestamp = model.timestamp;
+      this.exposureTime = model.exposureTime;
+      this.stageZ = model.stageZ;
+      this.x = model.x;
+      this.y = model.y;
+    }
+
+    @Override
     public void fillInData() throws IOException {
       super.fillInData();
 
-      RandomAccessInputStream s = new RandomAccessInputStream(filename);
+      RandomAccessInputStream s = getStream();
       try {
         s.order(isLittleEndian());
         s.seek(startingPosition + HEADER_SIZE);
@@ -2440,42 +2821,68 @@ public class ZeissCZIReader extends FormatReader {
         }
       }
       finally {
-        s.close();
+        if (stream == null) {
+          s.close();
+        }
       }
     }
 
     // -- SubBlock API methods --
 
     public byte[] readPixelData() throws FormatException, IOException {
-      byte[] data = new byte[(int) dataSize];
       RandomAccessInputStream s = new RandomAccessInputStream(filename);
       try {
-        s.order(isLittleEndian());
-        s.seek(dataOffset);
-        s.read(data);
-
-        CodecOptions options = new CodecOptions();
-        options.interleaved = isInterleaved();
-        options.littleEndian = isLittleEndian();
-        options.maxBytes = getSizeX() * getSizeY() * getRGBChannelCount() *
-          FormatTools.getBytesPerPixel(getPixelType());
-
-        switch (directoryEntry.compression) {
-          case JPEG:
-            data = new JPEGCodec().decompress(data, options);
-            break;
-          case LZW:
-            data = new LZWCodec().decompress(data, options);
-            break;
-          case JPEGXR:
-            throw new UnsupportedCompressionException(
-              "JPEG-XR not yet supported");
-        }
-      }
-      finally {
+        return readPixelData(s);
+      } finally {
         s.close();
       }
+    }
 
+    public byte[] readPixelData(RandomAccessInputStream s) throws FormatException, IOException {
+      byte[] data = new byte[(int) dataSize];
+      s.order(isLittleEndian());
+      s.seek(dataOffset);
+        s.read(data);
+
+      CodecOptions options = new CodecOptions();
+      options.interleaved = isInterleaved();
+      options.littleEndian = isLittleEndian();
+      options.maxBytes = getSizeX() * getSizeY() * getRGBChannelCount() *
+        FormatTools.getBytesPerPixel(getPixelType());
+
+      switch (directoryEntry.compression) {
+        case UNCOMPRESSED:
+          break;
+        case JPEG:
+          data = new JPEGCodec().decompress(data, options);
+          break;
+        case LZW:
+          data = new LZWCodec().decompress(data, options);
+          break;
+        case JPEGXR:
+          throw new UnsupportedCompressionException(
+            "JPEG-XR not yet supported");
+        case 104: // camera-specific packed pixels
+          data = decode12BitCamera(data, options.maxBytes);
+          // reverse column ordering
+          for (int row=0; row<getSizeY(); row++) {
+            for (int col=0; col<getSizeX()/2; col++) {
+              int left = row * getSizeX() * 2 + col * 2;
+              int right = row * getSizeX() * 2 + (getSizeX() - col - 1) * 2;
+              byte left1 = data[left];
+              byte left2 = data[left + 1];
+              data[left] = data[right];
+              data[left + 1] = data[right + 1];
+              data[right] = left1;
+              data[right + 1] = left2;
+            }
+          }
+
+          break;
+        case 504: // camera-specific packed pixels
+          data = decode12BitCamera(data, options.maxBytes);
+          break;
+      }
       return data;
     }
 
@@ -2496,19 +2903,23 @@ public class ZeissCZIReader extends FormatReader {
         s.close();
       }
       catch (ParserConfigurationException e) {
+        metadata = null;
         return;
       }
       catch (SAXException e) {
+        metadata = null;
         return;
       }
 
       if (root == null) {
+        metadata = null;
         return;
       }
 
       NodeList children = root.getChildNodes();
 
       if (children == null) {
+        metadata = null;
         return;
       }
 
@@ -2530,13 +2941,16 @@ public class ZeissCZIReader extends FormatReader {
               String text = tagNode.getTextContent();
               if (text != null) {
                 if (tagNode.getNodeName().equals("StageXPosition")) {
-                  stageX = new Double(text);
+                  final Double number = Double.valueOf(text);
+                  stageX = new Length(number, UNITS.REFERENCEFRAME);
                 }
                 else if (tagNode.getNodeName().equals("StageYPosition")) {
-                  stageY = new Double(text);
+                  final Double number = Double.valueOf(text);
+                  stageY = new Length(number, UNITS.REFERENCEFRAME);
                 }
                 else if (tagNode.getNodeName().equals("FocusPosition")) {
-                  stageZ = new Double(text);
+                  final Double number = Double.valueOf(text);
+                  stageZ = new Length(number, UNITS.REFERENCEFRAME);
                 }
                 else if (tagNode.getNodeName().equals("AcquisitionTime")) {
                   Timestamp t = Timestamp.valueOf(text);
@@ -2551,17 +2965,59 @@ public class ZeissCZIReader extends FormatReader {
           }
         }
       }
+      metadata = null;
     }
+  }
+
+  private byte[] decode12BitCamera(byte[] data, int maxBytes) throws IOException {
+    byte[] decoded = new byte[maxBytes];
+
+    RandomAccessInputStream bb = new RandomAccessInputStream(
+      new ByteArrayHandle(data));
+    byte[] fourBits = new byte[(maxBytes / 2) * 3];
+    int pt = 0;
+    while (pt < fourBits.length) {
+      fourBits[pt++] = (byte) bb.readBits(4);
+    }
+    bb.close();
+    for (int index=0; index<fourBits.length-1; index++) {
+      if ((index - 3) % 6 == 0) {
+        byte middle = fourBits[index];
+        byte last = fourBits[index + 1];
+        byte first = fourBits[index - 1];
+        fourBits[index + 1] = middle;
+        fourBits[index] = first;
+        fourBits[index - 1] = last;
+      }
+    }
+
+    int currentByte = 0;
+    for (int index=0; index<fourBits.length;) {
+      if (index % 3 == 0) {
+        decoded[currentByte++] = fourBits[index++];
+      }
+      else {
+        decoded[currentByte++] =
+          (byte) (fourBits[index++] << 4 | fourBits[index++]);
+      }
+    }
+
+    if (isLittleEndian()) {
+      core.get(0).littleEndian = false;
+    }
+
+    return decoded;
   }
 
   /** Segment with ID "ZISRAWDIRECTORY". */
   class Directory extends Segment {
     public DirectoryEntry[] entries;
 
+    @Override
     public void fillInData() throws IOException {
       super.fillInData();
 
-      RandomAccessInputStream s = new RandomAccessInputStream(filename);
+      RandomAccessInputStream s = getStream();
       try {
         s.order(isLittleEndian());
         s.seek(startingPosition + HEADER_SIZE);
@@ -2574,7 +3030,9 @@ public class ZeissCZIReader extends FormatReader {
         }
       }
       finally {
-        s.close();
+        if (stream == null) {
+          s.close();
+        }
       }
     }
   }
@@ -2583,10 +3041,11 @@ public class ZeissCZIReader extends FormatReader {
   class AttachmentDirectory extends Segment {
     public AttachmentEntry[] entries;
 
+    @Override
     public void fillInData() throws IOException {
       super.fillInData();
 
-      RandomAccessInputStream s = new RandomAccessInputStream(filename);
+      RandomAccessInputStream s = getStream();
       try {
         s.order(isLittleEndian());
         s.seek(startingPosition + HEADER_SIZE);
@@ -2599,7 +3058,9 @@ public class ZeissCZIReader extends FormatReader {
         }
       }
       finally {
-        s.close();
+        if (stream == null) {
+          s.close();
+        }
       }
     }
   }
@@ -2610,10 +3071,11 @@ public class ZeissCZIReader extends FormatReader {
     public AttachmentEntry attachment;
     public byte[] attachmentData;
 
+    @Override
     public void fillInData() throws IOException {
       super.fillInData();
 
-      RandomAccessInputStream s = new RandomAccessInputStream(filename);
+      RandomAccessInputStream s = getStream();
       try {
         s.order(isLittleEndian());
         s.seek(startingPosition + HEADER_SIZE);
@@ -2625,7 +3087,9 @@ public class ZeissCZIReader extends FormatReader {
         s.read(attachmentData);
       }
       finally {
-        s.close();
+        if (stream == null) {
+          s.close();
+        }
       }
     }
   }
@@ -2669,7 +3133,7 @@ public class ZeissCZIReader extends FormatReader {
     }
   }
 
-  class DimensionEntry {
+  static class DimensionEntry {
     public String dimension;
     public int start;
     public int size;
@@ -2685,7 +3149,7 @@ public class ZeissCZIReader extends FormatReader {
     }
   }
 
-  class AttachmentEntry {
+  static class AttachmentEntry {
     public String schemaType;
     public long filePosition;
     public int filePart;
@@ -2704,7 +3168,7 @@ public class ZeissCZIReader extends FormatReader {
     }
   }
 
-  class Channel {
+  static class Channel {
     public String name;
     public String color;
     public IlluminationType illumination;
@@ -2715,6 +3179,38 @@ public class ZeissCZIReader extends FormatReader {
     public Double exposure;
     public Double gain;
     public String fluor;
+    public String filterSetRef;
+  }
+
+  static class Coordinate {
+    public int series;
+    public int plane;
+    private int imageCount;
+
+    public Coordinate(int series, int plane, int imageCount) {
+      this.series = series;
+      this.plane = plane;
+      this.imageCount = imageCount;
+    }
+
+    @Override
+    public boolean equals(Object o) {
+      if (o == null || !(o instanceof Coordinate)) {
+        return false;
+      }
+      return ((Coordinate) o).series == this.series &&
+        ((Coordinate) o).plane == this.plane;
+    }
+
+    @Override
+    public int hashCode() {
+      return series * imageCount + plane;
+    }
+
+    @Override
+    public String toString() {
+      return "[series = " + series + ", plane = " + plane + "]";
+    }
   }
 
 }
